<resources>
    <string name="app_name">DSI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_money">Tạo thêm nguồn thu nhập</string>
    <string name="first_money_description">Trở thành đối tác đáng tin cậy với chúng tôi bằng cách trở thành người bán hàng và kiếm thêm thu nhập cho bạn</string>
    <string name="first_order_title">Tạo đơn hàng đâù tiên</string>
    <string name="first_order_desc">Tạo đơn hàng đâù tiên nhanh chóng và dễ dàng</string>
    <string name="payment_title">Thanh toán thuận tiện</string>
    <string name="payment_desc">TThanh toán thuận tiện và an toàn chỉ với 1 nút bấm và không giới hạn</string>
    <string name="pay_everywhere_title">Thanh toán bất cứ đâu</string>
    <string name="pay_everywhere_desc">Chỉ cần có mạng bạn có thể quản lý dòng tiền của mình mọi lúc mọi nơi</string>
    <!--Button-->
    <string name="continute">Tiếp tục</string>
    <!--shopper-->
    <string name="name_shop">Tên cửa hàng</string>
    <string name="email">email</string>
    <string name="phone">Số điện thoại</string>
    <string name="shop_address">Địa chỉ cửa hàng</string>
    <string name="confirm">Xác nhận</string>
    <string name="choose_img">Chọn ảnh</string>
    <string name="save">Lưu</string>
    <string name="product_confirm">Xác nhận đơn hàng</string>
    <string name="status_product">Trạng thái đơn hàng</string>
    <string name="customer_support">Hỗ trợ khách hàng</string>
    <string name="shop_coupon">Quản lý mã giảm giá</string>
    <string name="search_nameProduct">Nhập tên sản phẩm</string>

</resources>