<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_back"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.15"
        android:layout_height="40dp"

        app:layout_constraintTop_toBottomOf="@id/g1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"

        android:clickable="true"
        android:src="@drawable/icon_back"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_nameshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/name_shop"
        android:textColorHint="@color/HintColor"
        app:layout_constraintBottom_toTopOf="@id/layout_email"

        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/Gray"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_nameshop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"

            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:hint="@string/email"
        android:textColorHint="@color/HintColor"
        app:boxStrokeColor="@color/Gray"
        app:strokeWidth="1dp"

        app:layout_constraintTop_toBottomOf="@id/layout_nameshop"
        app:layout_constraintBottom_toTopOf="@id/layout_phone"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"

            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:hint="@string/phone"
        android:textColorHint="@color/HintColor"
        app:boxStrokeColor="@color/Gray"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/layout_email"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"

            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_shopAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/shop_address"
        android:textColorHint="@color/HintColor"
        app:boxStrokeColor="@color/Gray"
        app:strokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/layout_phone"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_shopAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@id/layout_shopAdress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        android:text="@string/confirm"
        android:textAllCaps="false"
        android:enabled="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color_state"
        />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>